crates/diffguard-core/src/snapshots/diffguard_core__csv__tests__snapshot_csv_no_findings.snap
---
source: crates/diffguard-core/src/csv.rs
expression: csv
---
file,line,rule_id,severity,message,snippet
