crates/diffguard-core/src/snapshots/diffguard_core__csv__tests__snapshot_csv_special_chars.snap
---
source: crates/diffguard-core/src/csv.rs
expression: csv
---
file,line,rule_id,severity,message,snippet
src/file.rs,5,test.rule,warn,"Message with ""quotes"" and, commas","let s = ""hello
world"";"
