crates/diffguard-core/src/snapshots/diffguard_core__csv__tests__snapshot_tsv_no_findings.snap
---
source: crates/diffguard-core/src/csv.rs
expression: tsv
---
file	line	rule_id	severity	message	snippet
